# databricks_hackathon

./: .gitignore  README.md  presentation_scripts.txt
data/: fraud_tactics.csv  usecase.txt
databricks_apps/fraud-detection-app_2024_10_25-04_24/streamlit-fraud-app/: app.py  requirements.txt  util.py
databricks_apps/fraud-detection-app_2024_10_25-04_24/streamlit-fraud-app/pages/: call_summarization.py  dashboard.py  feedback.py  real_time_detection.py  sentiment_analysis.py
ds-notebooks/: Create Tables.py  RAG_deployment.py  RAG_fraud.py  RAG_test.py  README.md  Stream Data.py
ds-notebooks/adhoc_test/: Fraud_Analysis.py  Rag.py
ds-notebooks/jacob/: Fraud_Analysis.py  RAG Fraud Deployment.py  RAG_fraud_index.py
health-bridge-app/: README.md  pyproject.toml
health-bridge-app/health_bridge_app/: aws_func.py  aws_func_test.py  main.py  main_app_test.py  models.py
health-bridge-ui/: README.md  package-lock.json  package.json
health-bridge-ui/src/: App.css  App.tsx  main.tsx  router.tsx
health-bridge-ui/src/compoents/: health-talk.tsx  home-page.tsx  term-explore.tsx
health-bridge-ui/src/compoents/common/header/: header.tsx
health-bridge-ui/src/compoents/common/left-menu/: left-menu.tsx
health-bridge-ui/src/compoents/common/table/: table.tsx
health-bridge-ui/src/services/: health-talk-api.ts
health-bridge-ui/src/services/common/: fetch-api.ts  service-types.ts
health-bridge-ui/src/store/: health-talk-store.ts  user-store.ts
