[tool.poetry]
name = "health-bridge-app"
version = "0.1.0"
description = ""
authors = ["gubo2012 <gubo2012v@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
